# managebac-assignment-checker

./: .app_state.json  .env.example  .gitignore  .install_state.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS.md  GITHUB_DETAILED_CHECK.md  GITHUB_OPTIMIZATION.md  GITHUB_TEST_REPORT.md  INSTALLATION_FIX.md  INSTALLATION_TROUBLESHOOTING.md  ISSUE_SOLUTIONS.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.en.md  README.md  RELEASE_NOTES.md  SETUP_SUMMARY.md  START.bat  START.sh  TEST_REPORT.md  TROUBLESHOOTING.md  TUTORIAL.md  WARP.md  advanced_installer.py  build_macos_app.py  build_macos_app.sh  comprehensive_diagnostic.py  config.example.env  config_helper.py  config_templates.py  config_validator.py  create_desktop_shortcut.py  create_shortcuts.py  demo_setup.py  enhanced_error_handler.py  enhanced_setup_gui.py  (+55 more)
.github/workflows/: ci.yml  test-installers.yml
managebac_checker/: __init__.py  ai_assistant.py  analysis.py  analyzer.py  checker.py  cli.py  config.py  enhanced_gui.py  gui.py  improved_system_tray.py  logging_utils.py  models.py  notifications.py  professional_gui.py  reporter.py  reporting.py  runner.py  scraper.py  system_tray.py
managebac_checker/templates/: report.html
scripts/: performance_optimizer.py  quality_checker.py
tests/: factories.py  test_analysis.py  test_config.py  test_professional_gui.py  test_reporting.py
